feat: creating auth and users in swagger.json
